[gd_scene load_steps=8 format=2]

[ext_resource path="res://Captcha.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tetris.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gauge.tscn" type="PackedScene" id=3]
[ext_resource path="res://font_text.tres" type="DynamicFont" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://font_title.tres" type="DynamicFont" id=6]
[ext_resource path="res://recaptcha.tres" type="Theme" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Captcha" parent="." instance=ExtResource( 1 )]
margin_left = 600.0
margin_top = 72.0
margin_right = 984.0
margin_bottom = 608.0

[node name="Tetris" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
margin_left = 16.0
margin_top = 160.0
margin_right = 336.0
margin_bottom = 608.0

[node name="Gauge" parent="." instance=ExtResource( 3 )]
anchor_left = 0.503906
anchor_right = 0.503906
anchor_bottom = 0.0
margin_left = -236.0
margin_top = 16.0
margin_right = 236.0
margin_bottom = 64.0

[node name="InvestorAlert" type="Panel" parent="."]
margin_left = 368.0
margin_top = 368.0
margin_right = 568.0
margin_bottom = 488.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InvestorAlert"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Accuracy is going
down!  The investors
are getting worried..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="ColorRect" parent="InvestorAlert"]
margin_left = 8.0
margin_top = 96.0
margin_right = 192.0
margin_bottom = 112.0

[node name="InnerGauge" type="ColorRect" parent="InvestorAlert/Gauge"]
margin_right = 184.0
margin_bottom = 16.0
color = Color( 0.92549, 0.258824, 0.258824, 1 )

[node name="Timer" type="Timer" parent="InvestorAlert"]
wait_time = 10.0
one_shot = true

[node name="Stats" type="Panel" parent="."]
margin_left = 368.0
margin_top = 88.0
margin_right = 568.0
margin_bottom = 336.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accuracy" type="Control" parent="Stats"]
margin_left = -8.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 160, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestValueLabel" type="Label" parent="Stats/Accuracy"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -56.0
margin_right = 8.0
margin_bottom = -32.0
custom_fonts/font = ExtResource( 4 )
text = "Best:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestValue" type="Label" parent="Stats/Accuracy"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -56.0
margin_right = 8.0
margin_bottom = -32.0
custom_fonts/font = ExtResource( 4 )
text = "50.0%"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Stats/Accuracy"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "accuracy"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Stats/Accuracy"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -32.0
margin_right = 8.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 6 )
text = "50.0%"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Data" type="Control" parent="Stats"]
margin_left = -8.0
margin_top = 104.0
margin_right = 184.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 160, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Stats/Data"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "data"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Stats/Data"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -32.0
margin_right = 8.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 6 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layers" type="Control" parent="Stats"]
margin_left = -8.0
margin_top = 176.0
margin_right = 184.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 160, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Stats/Layers"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "layers"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Stats/Layers"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -32.0
margin_right = 8.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 6 )
text = "5"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLostTetris" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.457031, 0.457031, 0.457031, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameLostTetris"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -96.0
margin_right = 184.0
margin_bottom = 96.0
theme = ExtResource( 7 )

[node name="Label" type="Label" parent="GameLostTetris/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -74.0
margin_right = 185.0
margin_bottom = -31.0
custom_fonts/font = ExtResource( 6 )
text = "You Were Fired!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameLostTetris/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -24.0
margin_right = 180.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 4 )
text = "Your neural network was poorly designed and the gradient vanished"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="GameLostTetris/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = 40.0
margin_right = 180.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 4 )
text = "Refresh the page to try again!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLostInvestors" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.457031, 0.457031, 0.457031, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameLostInvestors"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -96.0
margin_right = 184.0
margin_bottom = 96.0
theme = ExtResource( 7 )

[node name="Label" type="Label" parent="GameLostInvestors/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -74.0
margin_right = 185.0
margin_bottom = -31.0
custom_fonts/font = ExtResource( 6 )
text = "You Were Fired!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameLostInvestors/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -24.0
margin_right = 180.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 4 )
text = "The accuracy of the app was down for too long, and the investors pulled back"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="GameLostInvestors/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = 40.0
margin_right = 180.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 4 )
text = "Refresh the page to try again!"
align = 1
autowrap = true

[node name="PauseScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.457031, 0.457031, 0.457031, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PauseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -96.0
margin_right = 184.0
margin_bottom = 96.0
theme = ExtResource( 7 )

[node name="Label" type="Label" parent="PauseScreen/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -32.0
margin_right = 185.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 6 )
text = "On a Break"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PauseScreen/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 11.0
margin_right = 184.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 4 )
text = "Press ESC to resume working"
align = 1

[node name="StartScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.457031, 0.457031, 0.457031, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -468.0
margin_top = -288.0
margin_right = 468.0
margin_bottom = 288.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartScreen/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -248.0
margin_right = 226.0
margin_bottom = -205.0
custom_fonts/font = ExtResource( 6 )
text = "Welcome to Truck or Pupper!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="StartScreen/Panel"]
margin_left = 24.0
margin_top = 104.0
margin_right = 912.0
margin_bottom = 552.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartScreen/Panel/ScrollContainer"]
margin_right = 888.0
margin_bottom = 1023.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Thanks for joining the company!  As you know, we are a start-up developing our brand new app \"Truck or Pupper\" to explore the yet-untapped market of differentiating Puppers from Trucks.  For this, we are using the latest, state-of-the-art technology: Neural Networks!

As the sole Data Scientist in the company, your goal is to maximize the Accuracy of the Neural Network.  To do so, you will need to annotate Data, and improve the Network.

Collecting Data is done on the right.  A panel displays pictures of Trucks and Puppers, along with a Prompt and a \"VALIDATE\" button.  To annotate 1 data, you will need to select all the pictures corresponding to the Prompt, and then press the button.

Improving the Network is done on the left.  A second panel shows you the current architecture.  Blocks of Neural Network Units are introduced at the top, and you must place them to build the Network.  A unit is moved with the left/right/down arrow keys, and rotated with the up arrow/shift keys.  Pressing space automatically lowers the unit to the bottom.  Whenever a Layer (horizontal line of Units) is completed, the Network improves, and the Layer is hidden from the display.  To make your task easier, the Units are lowered automatically for you :-) Also, being a start-up, we need to move fast!  For that reason, every time a Layer is completed, the Units will start going down a bit faster.

In the middle, the Accuracy is displayed, along with the amount of Data and Layers.  To increase the Accuracy, you must both annotate the Data and improve the Network (complete Layers) at the same time!  Too much Data is useless (underfitting).  Too little, and your Accuracy will decrease (overfitting).

We cannot legally ask you to work constantly, so if you TRULY MUST, you may take a break by pressing ESC.

The investors care a lot about the project!  Therefore, if the Accuracy decreases too much, they will get scared and pull away.  If this happens, we won't have a choice but to fire you :-(

Also, be careful not to grow your Network too much without completing Layers.  If the Network reaches the top of the stack, the Gradient will vanish, training will stop, and you will be fired too :-((((

Good luck, and fail fast!

Press ESC to start."
autowrap = true

[connection signal="captcha_valid" from="Captcha" to="." method="_on_Captcha_captcha_valid"]
[connection signal="captcha_wrong" from="Captcha" to="." method="_on_Captcha_captcha_wrong"]
[connection signal="block_placed" from="Tetris" to="." method="_on_Tetris_block_placed"]
[connection signal="game_lost" from="Tetris" to="." method="_on_Tetris_game_lost"]
[connection signal="line_cleared" from="Tetris" to="." method="_on_Tetris_line_cleared"]
[connection signal="timeout" from="InvestorAlert/Timer" to="." method="_on_Timer_timeout"]
